* 0.5.13	00.09.2006	Johannes Winkelmann
- Show undecided versions in diff and sysup when using "prefer higher"
- fix display bug in "dependent"
- fix bug in version comparator

* 0.5.12	00.04.2006  Johannes Winkelmann
- Add 'depinst' in 'help' (thanks Simone)
- Fix compilation on OpenBSD
- Show alias info in depends
- don't install alias file and deplist
- unlock ports on remove
- fix lock: previously locking would only work for ports in the ports tree
- allow to remove log files of successful builds
- print update summary right before running the addcommand
- print full add command and PACKAGE_DIR info when using install/update -v
- Make 'cat' and 'readme' use $PAGER if set
- update default prt-get.conf to reflect new port hierarchy (core/opt/contrib)
- add timestamps to log files
- fix aliasing bug introduce earlier in the .12 session (thanks Mark)
- add --recursive and --tree for dependent
- add listorphans command

* 0.5.11	29.05.2005  Johannes Winkelmann
- add --path to 'ls'
- initial regex support
- replace `uname -r` and `date +...` in version strings
- add 'useregex' config key and --regex command line argument
- Add --full to fsearch
- use regex in fsearch if requested
- add leading slash to fsearch result
- support both `` and $()
- support date patterns like '+%Y'
- add aliases and deplist to dist-tarball
- support multiple shell patterns in version

* 0.5.10	21.04.2005  Johannes Winkelmann
- fix bugs #3735, #3836
- implement --ignore=<port1>,<port2> feature
- fix --path for list, search
- add --path for depends
- enable logfile and depfile in default prt-get.conf


* 0.5.9         06.12.2005  Johannes Winkelmann
- add alias support
- use absolut pathes for commands (pkgmk et al)
- add -v switch to 'info' to show the readme
- fix 'keephigher' in default prt-get.conf
- add deptree to 'help'
- remove some debug test
- prettify error message when packages are not found
- change 'bash' to 'sh' in process.cpp